--- a/src/main/resources/templates/compraTicket.html
+++ b/src/main/resources/templates/compraTicket.html
@@ -31,7 +31,7 @@
 
 <body>
 
-    <div th:insert="/layout/headerCliente :: header"></div>
+    <div th:insert="/layout/header :: header"></div>
     <br>
 
     <div class="container">
