--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 
 <body>
     
-    <div th:insert="/layout/headerCliente :: header"></div> 
+    <div th:insert="/layout/header :: header"></div> 
 
     <!-- HERO SECTION -->
     <div class="hero-section">
