--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
 
 <body class="body-usuarios-cursos">
 
-    <div th:insert="/layout/headerCliente :: header"></div>
+    <div th:insert="/layout/header :: header"></div>
     <br>
     <!-- <i class='bx bx-user' ></i> -->
 
