--- a/src/main/resources/templates/registroUsuario.html
+++ b/src/main/resources/templates/registroUsuario.html
@@ -43,7 +43,7 @@
 
 <body class="body-usuarios-cursos">
 
-    <div th:insert="/layout/headerCliente :: header"></div>
+    <div th:insert="/layout/header :: header"></div>
     <br>
 
     <div class="container">
