--- a/src/main/resources/templates/mostrarCompras.html
+++ b/src/main/resources/templates/mostrarCompras.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mostrar Usuarios</title>
+<title>Mostrar Compras Tickets</title>
 <link th:rel="stylesheet" type="text/css"
 	th:href="@{/webjars/bootstrap/5.0.2/css/bootstrap.min.css}">
 <!-- GOOGLE FONTS -->
