--- a/src/main/resources/templates/mostrarPeliculas.html
+++ b/src/main/resources/templates/mostrarPeliculas.html
@@ -2,52 +2,50 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mostrar Peliculas</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Mostrar Peliculas</title>
 	<link th:rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/5.0.2/css/bootstrap.min.css}">
-    <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap"
-        rel="stylesheet">
-    <!-- OWL CAROUSEL -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-        crossorigin="anonymous" />
-    <!-- BOX ICONS -->
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <!-- APP CSS -->
-    
-    <link rel="stylesheet" href="../static/css/app.css" th:href="@{/css/app.css}">
-    <!--<link rel="stylesheet" href="../static/css/registroUsuario.css" th:href="@{/css/registroUsuario.css}">-->
-    <!-- <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" href="/static/css/style.css"> -->
-    
+	<!-- GOOGLE FONTS -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap"
+		rel="stylesheet">
+	<!-- OWL CAROUSEL -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+		integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+		crossorigin="anonymous" />
+	<!-- BOX ICONS -->
+	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+	<!-- APP CSS -->
+
+	<link rel="stylesheet" href="../static/css/app.css" th:href="@{/css/app.css}">
+
 </head>
 
 <style>
-	.nav-menu{
-		padding-top:10px;
+	.nav-menu {
+		padding-top: 10px;
 	}
-	.color{
+
+	.color {
 		color: #000;
 	}
-	
-	td{
+
+	td {
 		line-height: auto;
 	}
 
-	.small{
+	.small {
 		font-size: 12px;
 	}
-
 </style>
 
 <body class="body-usuarios-cursos">
 
-    <div th:insert="/layout/header :: header"></div>
-    <br>
-	
+	<div th:insert="/layout/header :: header"></div>
+	<br>
+
 	<div class="container">
 		<div class="alert-danger text-center" th:if="${formMovieErrorMessage}" th:text="${formMovieErrorMessage}">
 			Name Error</div>
@@ -158,19 +156,22 @@
 			modalBodyInput.value = recipient2
 		})
 	</script>
-    
 
-    <script th:src="@{/webjars/bootstrap/5.0.2/js/bootstrap.min.js}" type="text/javascript"
-        src="webjars/bootstrap/5.0.2/js/bootstrap.min.js"></script>
-        
+
+	<script th:src="@{/webjars/bootstrap/5.0.2/js/bootstrap.min.js}" type="text/javascript"
+		src="webjars/bootstrap/5.0.2/js/bootstrap.min.js"></script>
+
 	<!-- SCRIPT -->
-    <!-- JQUERY -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- OWL CAROUSEL -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
-    <!-- APP SCRIPT -->
-    <script th:src="@{/js/app.js}" src="app.js"></script>
-	
+	<!-- JQUERY -->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<!-- OWL CAROUSEL -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+		integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+		crossorigin="anonymous"></script>
+	<!-- APP SCRIPT -->
+	<script th:src="@{/js/app.js}" src="app.js"></script>
+
 	<script type="text/javascript">
 		function confirmarEliminar(id) {
 			$("#identificadorDeUsuario").val(id);
