--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        Grupo 05
-    </title>
-     <!-- GOOGLE FONTS -->
+    <title>Grupo 05</title>
+    <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap"
+        rel="stylesheet">
     <!-- OWL CAROUSEL -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" />
     <!-- BOX ICONS -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <!-- APP CSS -->
@@ -21,8 +22,11 @@
 </head>
 
 <body>
-    
-    <div th:insert="/layout/header :: header"></div> 
+
+
+    <div th:insert="/layout/headerCliente :: header" th:if="${band}"></div>
+    <div th:insert="/layout/header :: header" th:unless="${band}"></div>
+
 
     <!-- HERO SECTION -->
     <div class="hero-section">
@@ -41,110 +45,110 @@
                             </div>
                             <div class="movie-infos top-down delay-2">
                                 <div class="movie-info">
-                                    <i class="bx bxs-star"></i>
-                                    <span th:text="${m.rating}"></span>
+                                    <i class="bx bxs-star"></i> <span th:text="${m.rating}"></span>
                                 </div>
                                 <div class="movie-info">
-                                    <i class="bx bxs-time"></i>
-                                    <span th:text="${m.duracion}+' min'"></span>
-                                <!-- </div>
+                                    <i class="bx bxs-time"></i> <span th:text="${m.duracion}+' min'"></span>
+                                    <!-- </div>
                                 <div class="movie-info">
                                     <span>HD</span>
                                 </div>
                                 <div class="movie-info">
                                     <span>16+</span>
                                 </div> -->
-                            </div>
-                            <div class="item-content-description top-down delay-4" th:text="${m.descripcion}">
-                                
-                            </div>
-                            <div class="item-action top-down delay-6">
-                                <a th:href="@{/index/movie/{id}(id=${m.idPelicula})}" class="button button-hover">
-                                    <i class="bx bxs-right-arrow"></i>
-                                    <span>Ver Detalle</span>
-                                </a>
+                                </div>
+                                <div class="item-content-description top-down delay-4" th:text="${m.descripcion}"></div>
+                                <div class="item-action top-down delay-6">
+                                    <a th:href="@{/index/movie/{id}(id=${m.idPelicula})}" class="button button-hover">
+                                        <i class="bx bxs-right-arrow"></i>
+                                        <span>Ver Detalle</span>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <!-- END SLIDE ITEM -->
                 </div>
-                <!-- END SLIDE ITEM -->
+            </div>
+            <!-- END HERO SLIDE -->
+
+        </div>
+        <!-- END HERO SECTION -->
+
+        <!-- LATEST MOVIES SECTION -->
+        <div class="section">
+            <div class="container">
+                <div class="section-header">Estrenos</div>
+                <div class="movies-slide carousel-nav-center owl-carousel">
+                    <!-- MOVIE ITEM -->
+                    <a th:each="movie:${mostrarPeliculas}" th:href="@{/index/movie/{id}(id=${movie.idPelicula})}"
+                        class="movie-item"> <img th:src="${'data:image/png;base64,'+movie.portada}" alt="">
+                        <div class="movie-item-content">
+                            <div th:text="${movie.nombrePelicula}" class="movie-item-title">
+                                <!-- Aqui va  el nombre de la Pelicula -->
+                            </div>
+                            <div class="movie-infos">
+                                <div class="movie-info">
+                                    <i class="bx bxs-star"></i> <span th:text="${movie.rating}"></span>
+                                </div>
+                                <div class="movie-info">
+                                    <i class="bx bxs-time"></i> <span th:text="${movie.duracion}+' min'"></span>
+                                </div>
+
+                            </div>
+                        </div>
+                    </a>
+                    <!-- END MOVIE ITEM -->
+                </div>
             </div>
         </div>
-        <!-- END HERO SLIDE -->
-        
-    </div>
-    <!-- END HERO SECTION -->
+        <!-- END LATEST MOVIES SECTION -->
 
-    <!-- LATEST MOVIES SECTION -->
-    <div class="section">
-        <div class="container">
-            <div class="section-header">
-                Estrenos
-            </div>
-            <div class="movies-slide carousel-nav-center owl-carousel">
-                <!-- MOVIE ITEM -->
-                <a th:each="movie:${mostrarPeliculas}" th:href="@{/index/movie/{id}(id=${movie.idPelicula})}" class="movie-item">
-                    <img th:src="${'data:image/png;base64,'+movie.portada}" alt="">
-                    <div class="movie-item-content">
-                        <div th:text="${movie.nombrePelicula}" class="movie-item-title">
-                            <!-- Aqui va  el nombre de la Pelicula -->
-                        </div>
-                        <div class="movie-infos">
-                            <div class="movie-info">
-                                <i class="bx bxs-star"></i>
-                                <span th:text="${movie.rating}"></span>
-                            </div>
-                            <div class="movie-info">
-                                <i class="bx bxs-time"></i>
-                                <span th:text="${movie.duracion}+' min'"></span>
-                            </div>
-                            
-                        </div>
-                    </div>
-                </a>
-                <!-- END MOVIE ITEM -->
-            </div>
-        </div>
-    </div>
-    <!-- END LATEST MOVIES SECTION -->
 
-    
-   
-   
-    <div th:insert="/layout/footer :: footer"></div> 
-   
 
-    <!-- SCRIPT -->
 
-    
-    
-    <!-- JQUERY -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- OWL CAROUSEL -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
-    <!-- APP SCRIPT -->
-    <script th:src="@{js/app.js}" src="../static/js/app.js"></script>
+        <div th:insert="/layout/footer :: footer"></div>
 
-    <script th:src="@{/webjars/bootstrap/5.0.2/js/bootstrap.min.js}" type="text/javascript"
-        src="webjars/bootstrap/5.0.2/js/bootstrap.min.js"></script>
 
-    <script>
-        // var userLogin = document.getElementById('nameLogin');
-        // console.log(userLogin);
-        // var nombreUsuario = nombreLogin.textContent;
-        // if(userLogin == "anonymousUser"){
-        // }
-        // console.log("prueba");
-        // alert(nombreUsuario)
-        // var textoVacio = document.getElementById("nameLogin");
-        // var nombreUsuario = "[[${articleName}]]";
-        // console.log("[[${articleName}]]")
-        // if(nombreUsuario == ""){
-        //     document.getElementById("nameLogin").textContent="Iniciar Sesion";
-        // }
+        <!-- SCRIPT -->
 
-    </script>
 
+
+        <!-- JQUERY -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <!-- OWL CAROUSEL -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+            integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+            crossorigin="anonymous"></script>
+        <!-- APP SCRIPT -->
+        <script th:src="@{js/app.js}" src="../static/js/app.js"></script>
+
+        <script th:src="@{/webjars/bootstrap/5.0.2/js/bootstrap.min.js}" type="text/javascript"
+            src="webjars/bootstrap/5.0.2/js/bootstrap.min.js"></script>
+        <script>
+            // Ocultar elementos li del header principal 
+
+            var tipoSesion = "[[${sesion}]]";
+
+            //[CLIENTE]
+
+            if (tipoSesion == "[CLIENTE]") {
+                $("#uploadMovie").hide();
+                $("#viewMovie").hide();
+                $("#viewUser").hide();
+                $("#viewTickets").hide();
+            }
+
+            // Escribir "Cerrar Sesion si no hay ningun usuario logeado"
+
+            var bandera = "[[${band}]]";
+            console.log(bandera);
+
+            if (bandera == "false") {
+                document.getElementById("in-out").textContent = "Cerrar Sesion";
+            }
+        </script>
 </body>
 
 </html>
