--- a/src/main/resources/templates/registroUsuario.html
+++ b/src/main/resources/templates/registroUsuario.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cargar Usuario</title>
-	<link th:rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/5.0.2/css/bootstrap.min.css}">
+    <link th:rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/5.0.2/css/bootstrap.min.css}">
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap"
@@ -18,32 +18,35 @@
     <!-- BOX ICONS -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <!-- APP CSS -->
-    
+
     <link rel="stylesheet" href="../static/css/app.css" th:href="@{/css/app.css}">
     <!--<link rel="stylesheet" href="../static/css/registroUsuario.css" th:href="@{/css/registroUsuario.css}">-->
     <!-- <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css" href="/static/css/style.css"> -->
-    
+
 </head>
 
 <style>
-	.nav-menu{
-		padding-top:10px;
-	}
-	.center{
-		margin:50px auto;
-	}
-	.centrar{
-		margin:0 20px;
-	}
-	body{
-    	background-image: url(../static/img/fondo.jpg);
-    	background-size: cover;
-}
+    .nav-menu {
+        padding-top: 10px;
+    }
+
+    .center {
+        margin: 50px auto;
+    }
+
+    .centrar {
+        margin: 0 20px;
+    }
+
+    body {
+        background-image: url(../static/img/fondo.jpg);
+        background-size: cover;
+    }
 </style>
 
 <body class="body-usuarios-cursos">
 
-    <div th:insert="/layout/header :: header"></div>
+    <div th:insert="/layout/headerCliente :: header"></div>
     <br>
 
     <div class="container">
