--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -140,7 +140,7 @@
                 $("#viewTickets").hide();
             }
 
-            // Escribir "Cerrar Sesion si no hay ningun usuario logeado"
+            // Escribir "Cerrar Sesion si hay un usuario logeado"
 
             var bandera = "[[${band}]]";
             console.log(bandera);
