--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -23,10 +23,10 @@
                             <div class="content">
                                 <p><b>Integrantes</b></p>
                                 <ul class="footer-menu">
-                                    <li><a href="https://github.com/Leonel19hub" target="_blank">Coraite Facudno</a></li>
-                                    <li><a href="https://github.com/dzeko404" target="_blank">Ramos Flores</a></li>
-                                    <li><a href="https://github.com/SolGuari" target="_blank">Guari Sol</a></li>
+                                    <li><a href="https://github.com/Leonel19hub" target="_blank">Coraite Facundo</a></li>
                                     <li><a href="https://github.com/IgnacioGareca156" target="_blank">Gareca Ignacio</a></li>
+                                    <li><a href="https://github.com/SolGuari" target="_blank">Guari Sol</a></li>
+                                    <li><a href="https://github.com/dzeko404" target="_blank">Ramos Flores</a></li>
                                 </ul>
                             </div>
                         </div>
